<resources>
    <string name="app_name">KMA QRCODE</string>
    <!--    <string name="project_id">ACT Attendance</string>-->

    <string name="calendar">Calendar</string>
    <string name="attendance">Attendance</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="resetpassword">Change Password</string>
    <string name="logout">Log out</string>
    <string name="home">Home</string>
    <string name="classroom">Class</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>